@@ -30,10 +30,15 @@ Recommendations
 package beat
 
 import (
+	cryptRand "crypto/rand"
 	"flag"
 	"fmt"
+	"math"
+	"math/big"
+	"math/rand"
 	"os"
 	"runtime"
+	"time"
 
 	"github.com/elastic/beats/libbeat/cfgfile"
 	"github.com/elastic/beats/libbeat/common"
@@ -120,6 +125,24 @@ func Run(name, version string, bt Beater) error {
 type instance struct {
 	data   *Beat
 	beater Beater
+}
+
+func init() {
+	// Initialize runtime random number generator seed using global, shared
+	// cryptographically strong pseudo random number generator.
+	//
+	// On linux Reader might use getrandom(2) or /udev/random. On windows systems
+	// CryptGenRandom is used.
+	n, err := cryptRand.Int(cryptRand.Reader, big.NewInt(math.MaxInt64))
+	var seed int64
+	if err != nil {
+		// fallback to current timestamp on error
+		seed = time.Now().UnixNano()
+	} else {
+		seed = n.Int64()
+	}
+
+	rand.Seed(seed)
 }
 
 // newInstance creates and initializes a new Beat instance.
